tests/golden/parse_errors/export_invalid_struct.cd
export struct Point { x: number }
